--- a/src/app/pages/home/assets/scss/theme/_product.scss
+++ b/src/app/pages/home/assets/scss/theme/_product.scss
@@ -38,6 +38,7 @@ section.product{
         .usage{
           font-size: 12px;
           color:rgba($color: $basic-text-color, $alpha: 0.5);
+          display: none;
         }
       }
       .btn{
