--- a/src/app/pages/home/assets/scss/theme/_subscription.scss
+++ b/src/app/pages/home/assets/scss/theme/_subscription.scss
@@ -173,6 +173,11 @@
     color:white;
   }
 }
+#cancel-subscription-form{
+  .MuiRating-label{
+    font-size: 1.5rem;
+  }
+}
 @media (max-width: 767px) {
   .section-subscription {
     padding-top: 80px;
